// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders cyklo 1`] = `
<span
  style={
    Object {
      "fontSize": "100%",
    }
  }
>
  <img
    alt="cyklo"
    height={30}
    src="cyklo.png"
    title="cyklo"
    width={30}
  />
   
  cyklo
</span>
`;

exports[`renders cyklo with pohlaví and věk; do not show typ 1`] = `
<span
  style={
    Object {
      "fontSize": "100%",
    }
  }
>
  <img
    alt="žena"
    height={28}
    src="zena.png"
    title="žena"
    width={28}
  />
  60 let a více
</span>
`;

exports[`renders koloběžka with pohlaví 1`] = `
<span
  style={
    Object {
      "fontSize": "100%",
    }
  }
>
  <img
    alt="koloběžka"
    height={30}
    src="kolobezka.png"
    title="koloběžka"
    width={30}
  />
   
  <img
    alt="žena"
    height={28}
    src="zena.png"
    title="žena"
    width={28}
  />
</span>
`;

exports[`renders maraton with pohlaví and věk 1`] = `
<span
  style={
    Object {
      "fontSize": "100%",
    }
  }
>
  <img
    alt="maraton"
    height={30}
    src="maraton.png"
    title="maraton"
    width={30}
  />
   
  <img
    alt="muž"
    height={28}
    src="muz.png"
    title="muž"
    width={28}
  />
  18 - 39 let
</span>
`;

exports[`renders půlmaraton with pohlaví and věk (max) 1`] = `
<span
  style={
    Object {
      "fontSize": "100%",
    }
  }
>
  <img
    alt="půlmaraton"
    height={30}
    src="pulmaraton.png"
    title="půlmaraton"
    width={42}
  />
   
  <img
    alt="žena"
    height={28}
    src="zena.png"
    title="žena"
    width={28}
  />
  60 let a více
</span>
`;
